--- a/heading.html
+++ b/heading.html
@@ -7,25 +7,49 @@
   </head>
   <body>
 
-<h1>WEBSITE DEVELOPMENT COURSE</h1><br>
+<h1 id ="head1">WEBSITE DEVELOPMENT COURSE</h1><br>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
   dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
   commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
   Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.#</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-   Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-   Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-   Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-<h3>WEBSITE LINKS</h3>
+<h3 id="head2">WEBSITE LINKS</h3>
 <a href="https://studentportal.helb.co.ke/service/index/frm_loans">Helb loan login</a><br>
 <a href="https://learn.emobilis-lms.org/my/">eMobilis</a><br>
 <a href="https://www.remotasks.com/en/dashboard">Remotasks</a>
 
-<h3>OUR BEST IMAGE</h3>
+<h3 id ="head3">OUR BEST IMAGE</h3>
 <img src="kenya.jpg" alt="">
 <img src="background.jpg" alt="">
+
+<h2 id ="head3">unordered list</h2>
+<h3 id ="head3">list of countries</h3>
+<ul id ="list1">
+  <li>kenya</li>
+  <li>uganda</li>
+  <li>tanzania</li>
+  <li>usa</li>
+  <li>congo</li>
+</ul>
+
+<h2 id ="head3">ordered list</h2>
+<h3 id ="head3">list of cars</h3>
+<ol id ="list2">
+  <li>mercedes</li>
+  <li>range</li>
+  <li>toyota</li>
+  <li>probox</li>
+  <li>vits</li>
+  <li>wish</li>
+</ol>
+<h2 id ="head3">descreptive list</h2>
+<dl id ="list3">
+  <dt>banana</dt>
+  <dd>I hate them all</dd>
+  <dt>kenya</dt>
+  <dd>sihami kenya hataa</dd>
+</dl>
 
   </body>
 </html>
